# learnfast

./: .gitignore  CLAUDE.md  README.md  log.md  pyproject.toml  react-backend.py  step01_hello_fastapi.py  step02_path_params.py  step03_query_params.py  step04_request_body.py  step05_response_models.py  step06_form_and_file.py  step07_error_handling.py  step08_path_op_config.py  step09_dependency_injection.py  step10_header_cookie.py  step11_jwt_auth.py  step12_oauth2_scopes.py  step13_rbac.py  step20_cors_security.py  step21_background_tasks.py  step22_websocket.py  step24_streaming.py
home/: abc.txt
react-frontend/: index.html  package-lock.json  package.json  vite.config.js
react-frontend/src/: App.css  App.jsx  api.js  main.jsx
step14_sqlalchemy_sync/: __init__.py  database.py  main.py  models.py
step15_crud_api/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
step16_async_database/: __init__.py  database.py  main.py  models.py
step17_alembic/: README.md  __init__.py  alembic.ini  env.py
step18_repository_uow/: __init__.py  database.py  main.py
step19_middleware/: __init__.py  main.py
step23_websocket_chat/: __init__.py  main.py
step25_testing/: __init__.py  app.py  conftest.py  test_app.py
step26_async_testing/: __init__.py  app.py  test_app.py
step27_integration_tests/: __init__.py  app.py  conftest.py  database.py  models.py
step28_configuration/: .env.example  __init__.py  app.py
step29_logging/: __init__.py  app.py
step30_enterprise/: Dockerfile  __init__.py  docker-compose.yml  main.py
(+29 files in other folders)
